<resources>
    <string name="app_name">DVT Weather</string>
    <string name="defaultWeatherValue">25⁰</string>
    <string name="defaultLocationName">Sandton</string>
    <string name="defaultWeatherType">SUNNY</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="setting">Weather</string>

    <string name="min">min</string>
    <string name="current">current</string>
    <string name="max">max</string>
    <string name="defaultUnit">0⁰</string>
    <string name="defDay">Today</string>
    <string name="savedThis">ADD TO YOUR FAVORITE</string>
    <string name="savedAlready">SAVED TO YOUR FAVORITE</string>

    <string name="confLevel">COMFORT LEVEL</string>
    <string name="feelLike">Feels like</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>

    <string name="devEmail">dvtweather@dvt.co.za</string>
    <string name="devNumber">+27735707103</string>
    <string name="devCn">[ DVT Meteorologist ]</string>
    <string name="savedWeather">Saved weather</string>

    <string name="locName">City name</string>
    <string name="countryName">Country name</string>
    <string name="autoDetect"> - Auto Detect</string>
    <string name="cityW">City weather</string>
    <string name="temp">Temperature</string>

    <string name="yourFvIsEmpty">Your favorite list is empty 🙁</string>
    <string name="Favorite">My favorite places</string>

</resources>