<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/UIScreenView"
    android:orientation="vertical"
    android:background="#f1f1f1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">
    <LinearLayout
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/myCurrentLocation"
            android:orientation="horizontal"
            android:paddingTop="30sp"
            android:layout_marginBottom="2sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/closeBnt"
                android:contentDescription="@string/setting"
                android:paddingRight="10sp"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_navigate_before_24"/>

            <TextView
                android:paddingTop="5sp"
                style="@style/wearherSettingTxt"
                android:text="@string/Favorite"/>



        </LinearLayout>

        <!--this is the ListView that will contain the favorite location -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favList"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

       <TextView
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/nothingToShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_box_10px"
        android:text="@string/yourFvIsEmpty"
        android:padding="10sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:layout_gravity="center"/>




</RelativeLayout>